--- a/index.html
+++ b/index.html
@@ -1,24 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title></title>
-	<link href="s1.css" rel="stylesheet">
-</head>
+	<title> Fistachy </title>
+	<link rel="stylesheet" type="text/css" href="d1.css">
 <body>
-  <div id="podziel">
-    <div id="g">
-  	  deska
-    </div> 
-  <div id="menu">
-  	menu <hr>
-  	<p> <a href=""> Strona główna </a> </p> <hr>
-  	<p> <a href=""> kontakt </a></p>
-  </div>
-  <div id="tekst">
-  	treść
-  </div>
-  </div>
+	
 
 </body>
 </html>
