--- a/index.html
+++ b/index.html
@@ -1,9 +1,45 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title> Fistachy </title>
-	<link rel="stylesheet" type="text/css" href="d1.css">
+	<meta charset="utf-8">
+	<title> Przewodnik po Rub on Rails </title>
+	<link type="text/css" rel="stylesheet" href="s1.css">
+</head>
 <body>
-	
-
+  <div id="header">
+  	<strong>Więcej na <a style="color: white; text-decoration: underline" href="rubyonrails.pl"> rubyonrail.pl:</a></strong> &nbsp; 
+  	<a href="rubyonrails.pl"> Start</a> | 
+  	<a href="rubyonrails.pl"> Pobierz</a> |
+  	<a href="rubyonrails.pl"> Wdrożenie</a> |
+  	<a href="rubyonrails.pl"> Kod (en)</a> |
+  	<a href="rubyonrails.pl"> Screencasty</a> |
+  	<a href="rubyonrails.pl"> Dokumentacja</a> |
+  	<a href="rubyonrails.pl"> Ekosystem</a> |
+  	<a href="rubyonrails.pl"> Forum</a> |
+  	<a href="rubyonrails.pl"> IRC</a>
+  </div>
+  <div id="bel"><div>
+  	<div> <a class="linkbel" href="rubyonrails.pl">Start </a></div>
+  	<div id="botton"><a class="linkbel" href="rubyonrails.pl"> Skorowidz </a> </div>
+  	<div> <a class="linkbel" href="rubyonrails.pl"> Przyłącz się! </a></div>
+  	<div><a class="linkbel" href="rubyonrails.pl"> Autorzy </a></div></div>
+  </div>
+  <div id="tekst"> 
+    <div>
+      <h1>Przewodniki po Ruby on Rails</h1>
+      <p> Przewodniki te zostały napisane, abyś mógł szybko zacząć efektywnie pracować z platformą Ruby on Rails oraz by pomóc Ci zrozumieć jak poszczególne jej elementy tworzą spójną całość. Strona ta dostępna jest w kilku wersjach: </p>
+      <ul> Strona ta dostępna jest w kilku wersjach:
+      <li> <a href="www.google.pl"><strong> angielska wersja stabilna </strong></a> - opisuje Railsy w wersji stabilnej 2.3 </li>
+      <li> <a href="www.google.pl"><strong> angielska wersja rozwojowa </strong></a> - opisuje Railsy w wersji rozwojowej</li>
+      </ul>
+      <h4>Docelowo polskie tłumaczenie pojawi się na <a href="www.google.pl"><strong> oficjalnej stronie frameworku.</strong></a></h4>
+    </div>
+  </div>
+  <div class="tresc">
+    <div>
+      <h1> Na początek </h1>
+      <p class="tresc"> Wszystko co musisz wiedzieć aby zainstalować Railsy oraz stworzyć swoją pierwszą aplikację.</p> <hr>
+    </div>
+  </div>
 </body>
 </html>
